--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       </div>
     </div>
     <!----- end of cart section -->
+    <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
