added accordion and footer

--- a/index.html
+++ b/index.html
@@ -71,7 +71,100 @@
       </div>
     </div>
     <!----- end of cart section -->
-    <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
+    <section class="accord">
+      <div class="accordion">
+        <h1>FAQs</h1>
+        <div class="accord-item">
+          <div class="acckrd-header">
+            How many days does it take for delivery
+          </div>
+          <div class="accord-body">
+            <div class="content">
+              It takes maximum of 3-4 working days. if we encounter any issues,
+              we would do well to notifying your prior the expected delivery
+              date
+            </div>
+          </div>
+        </div>
+        <div class="accord-item">
+          <div class="acckrd-header">
+            What is the leastr amount of item I can order?
+          </div>
+          <div class="accord-body">
+            <div class="content">
+              It takes maximum of 3-4 working days. if we encounter any issues,
+              we would do well to notifying your prior the expected delivery
+              date
+            </div>
+          </div>
+        </div>
+        <div class="accord-item">
+          <div class="acckrd-header">How do I get a coupon?</div>
+          <div class="accord-body">
+            <div class="content">
+              It takes maximum of 3-4 working days. if we encounter any issues,
+              we would do well to notifying your prior the expected delivery
+              date
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="footer">
+      <div class="foote">
+        <div class="ggg">
+          <h1>Tefe's <span class="color">Store</span></h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+            praesentium ipsam atque consectetur est quo!
+          </p>
+          <ul class="contact">
+            <li>Contact Us Today</li>
+            <li class="address">
+              <i class="fa fa-map-marker" aria-hidden="true"></i> No 13 Victoria
+              st, Lagos
+            </li>
+            <li class="mobile">
+              <i class="fa fa-phone" aria-hidden="true"></i>0521 226 1235
+            </li>
+            <li class="address">
+              <i class="fa fa-envelope" aria-hidden="true"></i> htdff@gnail.cvg
+            </li>
+          </ul>
+        </div>
+        <div class="ggg">
+          <h1>Services</h1>
+          <ul>
+            <li>
+              <i class="fa fa-chevron-right" aria-hidden="true"></i>NAtion Wide
+              Delivery
+            </li>
+            <li>
+              <i class="fa fa-chevron-right" aria-hidden="true"></i>Wholesale
+              deals
+            </li>
+            <li>
+              <i class="fa fa-chevron-right" aria-hidden="true"></i>Lorem,
+              ipsum.
+            </li>
+          </ul>
+        </div>
+        <div class="ggg">
+          <h1>Subscribe to our newsletter</h1>
+          <form action="" class="form-inline fm">
+            <input
+              type="email"
+              name="email"
+              id="inpt"
+              placeholder="Enter email address"
+            />
+
+            <input type="submit" value="Submit" id="inptt" />
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script> -->
     <script src="script.js"></script>
   </body>
 </html>
